--- a/03 - Data preprocessing and modeling.ipynb
+++ b/03 - Data preprocessing and modeling.ipynb
@@ -767,17 +767,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axs = plt.subplots(1, 4, figsize=(15, 4))\n",
+    "fig, axs = plt.subplots(3, 1, figsize=(8, 8))\n",
     "axs[0].plot(game_data.ply, game_data.y_pred_win)\n",
     "axs[1].plot(game_data.ply, game_data.white_clock)\n",
-    "axs[2].plot(game_data.ply, game_data.black_clock)\n",
-    "axs[3].plot(game_data.ply, game_data.regular_eval);  # + game_data.mate_eval);"
+    "axs[1].plot(game_data.ply, game_data.black_clock)\n",
+    "axs[2].plot(game_data.ply, game_data.regular_eval)\n",
+    "axs[2].plot(game_data.ply, game_data.mate_eval / 100, \"o\");"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
